src/sections/faq/style.css
.faq {
  margin-bottom: 6rem;
  color: var(--color-blue-700);
}

.faq__list {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 2rem;
  margin-top: 2rem;
}

.faq__item {
  width: 100%;
  /* min-width: 100%; */
  border: 2px solid var(--color-blue-700);
  border-radius: var(--border-radius-s);
}

.faq__question {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 2rem;
  background-color: transparent;
  cursor: pointer;
}

.faq__item--active .faq__question {
  padding: 2rem 2rem 1rem;
}

.faq__question h3 {
  font-size: 24px;
  line-height: 30px;
}

.faq__question .faq__icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

.faq__icon svg {
  width: 2em;
  height: 2em;
}

.faq__answer {
  width: 94%;
  overflow: hidden;
  font-size: 18px;
  line-height: 24px;
}

.faq__item--active .faq__muted {
  color: var(--color-blue-700);
}

@media screen and (max-width: 768px) {
  .faq {
    margin-bottom: 5rem;
  }
}

/* @media only screen and (max-width: 37.5em) {
  .faq {
    padding-bottom: 6rem;
  }

  .faq__answer {
    width: 83%;
    font-size: 14px;
    line-height: 20px;
    text-align: left;
  }

  .faq__question {
    padding: 2rem 2rem;
  }

  .faq__question h3 {
    font-size: 1.7rem;
  }

  .faq__icon svg {
    width: 1.2em;
    height: 1.2em;
  }
} */

@media screen and (max-width: 375px) {
  .faq {
    margin-bottom: 2rem;
  }

  .faq__list {
    gap: 1rem;
  }

  .faq__question {
    padding: 1rem 1rem;
  }

  .faq__question h3 {
    font-size: 18px;
    line-height: 24px;
  }

  .faq__answer {
    width: 83%;
    font-size: 16px;
    line-height: 20px;
  }
}

